Fix PermitRootLogin to no

--- a/roles/base/tasks/ssh.yml
+++ b/roles/base/tasks/ssh.yml
@@ -18,7 +18,7 @@
   ansible.builtin.lineinfile:
     dest: /etc/ssh/sshd_config
     regexp: ^PermitRootLogin
-    line: PermitRootLogin yes
+    line: PermitRootLogin no
   notify: Restart sshd
 
 - name: Set SSH PasswordAuthentication
