--- a/roles/base/handlers/monitoring.yml
+++ b/roles/base/handlers/monitoring.yml
@@ -3,3 +3,8 @@
   ansible.builtin.service:
     name: prometheus-node-exporter
     state: restarted
+
+- name: Restart syslog
+  ansible.builtin.service:
+    name: syslog
+    state: restarted
