Move working directory to /opt/mastodon in preparation for deb

--- a/group_vars/tootnet_staging/vars.yml
+++ b/group_vars/tootnet_staging/vars.yml
@@ -10,3 +10,5 @@ mastodon_app_s3_signature_version: s3
 
 redis_kv_memory: 512m
 redis_cache_memory: 256m
+
+restic_s3_bucket: staging-tootnet-nl-backup
