--- a/roles/mastodon_app/tasks/initialize.yml
+++ b/roles/mastodon_app/tasks/initialize.yml
@@ -12,7 +12,7 @@
 - name: Create mastodon database, bypassing pgbouncer
   ansible.builtin.command: bundle exec rake db:setup
   args:
-    chdir: /home/mastodon/live
+    chdir: /opt/mastodon
   become_user: mastodon
   environment:
     RAILS_ENV: production
