--- a/roles/mastodon_streaming/tasks/main.yml
+++ b/roles/mastodon_streaming/tasks/main.yml
@@ -16,4 +16,4 @@
 - name: Notify mastodon-streaming handler via mastodon-app
   ansible.builtin.command: /bin/true
   notify: Restart mastodon-streaming
-  changed_when: mastodon_app_envfile_result.changed
+  changed_when: mastodon_app_envfile_result.changed or mastodon_app_deb_result.changed
