--- a/inventory/tootnet_live.yaml
+++ b/inventory/tootnet_live.yaml
@@ -4,8 +4,8 @@ tootnet_live:
   hosts:
     tnlive1:
       ansible_host: 2a05:1500:702:5:1c00:bff:fe00:26fc
-    tnlive2:
-      ansible_host: 2a05:1500:702:5:1c00:1eff:fe00:26fd
+    tnlive3:
+      ansible_host: 2a05:1500:702:1:1c00:2dff:fe00:1f2
     tnlivemon:
       ansible_host: 2a05:1500:600:1:1c00:74ff:fe00:390
   # define which roles should run on which hosts(s) here
@@ -23,18 +23,18 @@ tootnet_live:
     # default sidekiq processes: can be ran on multiple hosts; will use a lot of CPU and RAM
     mastodon_sidekiq_auto:
       hosts:
-        tnlive2:
+        tnlive3:
     # scheduler sidekiq process: must only run on a single host; will use some RAM
     mastodon_sidekiq_scheduler:
       hosts: tnlive1
     # mastodon streaming API: can be ran on multiple hosts; will use some CPU and RAM
     mastodon_streaming:
       hosts:
-        tnlive2:
+        tnlive3:
     # mastodon web: can be ran on multiple hosts; will use a lot of CPU and RAM
     mastodon_web:
       hosts:
-        tnlive2:
+        tnlive3:
     # monitoring server (optional): must only run on a single host, ideally in a different DC/AZ than the other servers
     monitoring_server:
       hosts: tnlivemon
